Delete Event by id && find events by Coordinate and radius
